# hl26-hashbrowns

./: .gitignore  README.md  USAGE.md  api-sample.txt  ibex-docs.json  main.py  package-lock.json  pyproject.toml
planning-oracle/: Dockerfile  Makefile  README.md  pyproject.toml
planning-oracle/checkpoints/: app_extractor.pkl  best_model.pt  council_extractor.pkl
planning-oracle/config/: feature_display_names.py  settings.py
planning-oracle/data/: __init__.py  api_client.py  external.py  regions.py  schema.py
planning-oracle/features/: application.py  council.py  text.py
planning-oracle/inference/: __init__.py  api.py  pipeline.py
planning-oracle/model/: approval_model.py  attribution.py  calibration.py  council_ranker.py
planning-oracle/scripts/: run_pipeline.py
planning-oracle/tests/: conftest.py  test_api_client.py  test_features.py  test_inference.py  test_model.py
planning-oracle/training/: __init__.py  dataset.py  train.py
python/: Makefile  README.md  main.py  main_2.py  pyproject.toml  requirements.txt
python/analysis/: __init__.py  agent.py  analyser.py  comparables.py  models.py  report_generator.py  scorer.py
python/api/: main.py  orchestrator.py
python/checkpoints/: best_model.pt
python/data/: README.md  __init__.py  council_codes.txt  council_list.xlsx  councils.py  create_db.py  regions.py
python/data/analysis_data/: db.py
python/data/council_boundaries/: create_db.py
python/data/flood_data/: create_db.py  parse.py
python/data/ghost_permit_data/: 2015.csv  2016.csv  2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv  2025.csv  create_db.py  data.py  parse.py
python/data/green_belt_data/: create_db.py  parse.py
python/data/housing_test_data/: create_db.py  parse.py
python/data/ibex_data/: create_db.py  parse.py
python/data/income_data/: 2023.xlsx  create_db.py  parse.py
python/ghost_permit_data/: 2017.csv  2024.csv  __init__.py  create_db.py  data.py  parse.py
python/hashbrowns/: __init__.py  config.py
python/hashbrowns/ibex/: __init__.py  client.py  freshness.py  geometry.py  models.py  pagination.py
python/hashbrowns/ml/: __init__.py  encoder.py  feature_analysis.py  model.py  model_nn.py
python/intent_parser/: __init__.py  llm_parser.py  location.py  schema.py
python/intent_parser/adapters/: __init__.py  base.py  constraints.py  epc.py  flood.py  ibex.py  price_paid.py
python/neural_network/: pyproject.toml
python/neural_network/config/: __init__.py
python/neural_network/data/: api_client.py  regions.py
python/neural_network/features/: __init__.py  text.py
python/neural_network/inference/: api.py  parser.py  pipeline.py
python/neural_network/model/: __init__.py  approval_model.py  attribution.py  calibration.py  council_ranker.py
python/neural_network/scripts/: run_pipeline.py
python/neural_network/training/: dataset.py  evaluate.py  train.py
python/report/: __init__.py  builder.py  generate.py  models.py  renderer.py
python/report/sections/: __init__.py  approval_prediction.py  base.py  ghost_permits.py  green_belt.py  income.py
python/routers/: analyse.py  council_stats.py  councils.py
python/scripts/: test_pdf_generation.py
(+28 files in other folders)
