[project]
name = "planning-oracle"
version = "0.1.0"
description = "ML pipeline for predicting planning application outcomes"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.2,<3",
    "sentence-transformers>=3.0,<4",
    "shap>=0.45,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "duckdb>=1.0,<2",
    "polars>=0.20,<1",
    "fastapi>=0.111,<1",
    "uvicorn>=0.29,<1",
    "scikit-learn>=1.4,<2",
    "matplotlib>=3.8,<4",
    "tenacity>=9",
    "odfpy>=1.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9",
    "pytest-asyncio>=0.23,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "data",
    "features",
    "model",
    "training",
    "inference",
]
