[project]
name = "hashbrowns"
version = "0.1.0"
description = "Hashbrowns planning data analysis package"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.2",
    "httpx==0.28.*",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic>=2.10",
    "pydantic-settings>=2",
    "pyproj==3.7.*",
    "python-dotenv==1.0.*",
    "scikit-learn==1.8.0",
    "tenacity>=9",
    "torch>=2.10.0",
    "reportlab>=4.0",
    "fastapi>=0.129.2",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.25.*",
    "pytest-cov==6.*",
    "respx==0.22.*",
]
